--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
@@ -100,7 +99,7 @@
               width="264"
               height="260"
             />
-            <h class="title-team-members">Mark Guerrero</h>
+            <h3 class="title-team-members">Mark Guerrero</h3>
             <p class="team-profession">Product Designer</p>
           </li>
           <li>
@@ -141,7 +140,7 @@
         ><span class="logo-first-part">Web</span
         ><span class="logo-second-part">Studio</span>
       </a>
-      <p class="footer-text">
+      <p class="page-footer">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
