--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
   <body>
     <header>
       <nav>
-        <a class="logo" href="./index.html"
-          ><span class="logo-part">Web</span>Studio</a
-        >
+        <a class="logo" href="">Web<span class="logo-part">Studio</span> </a>
         <ul>
           <li>
             <a class="nav-link" href="/index.html">Studio</a>
@@ -99,7 +97,7 @@
               width="264"
               height="260"
             />
-            <h3 class="title-team-members">Mark Guerrero</h3>
+            <h3 class="team-member">Mark Guerrero</h3>
             <p class="team-profession">Product Designer</p>
           </li>
           <li>
@@ -109,7 +107,7 @@
               width="264"
               height="260"
             />
-            <h3 class="title-team-members">Tom Ford</h3>
+            <h3 class="team-member">Tom Ford<h3>
             <p class="team-profession">Frontend Developer</p>
           </li>
           <li>
@@ -118,8 +116,9 @@
               alt="Camila Garcia"
               width="264"
               height="260"
-            />
-            <h3 class="title-team-members">Camila Garcia</h3>
+  />
+            <h3 class="team-member">Camila Garcia
+            </h3>
             <p class="team-profession">Marketing</p>
           </li>
           <li>
@@ -129,7 +128,7 @@
               width="264"
               height="260"
             />
-            <h3 class="title-team-members">Daniel Wilson</h3>
+            <h3 class="team-member">Daniel Wilson</h3>
             <p class="team-profession">UI Designer</p>
           </li>
         </ul>
@@ -137,8 +136,7 @@
     </main>
     <footer>
       <a class="logo" href="./index.html"
-        ><span class="logo-first-part">Web</span
-        ><span class="logo-second-part">Studio</span>
+        >Web ><span class="logo-second">Studio</span>
       </a>
       <p class="page-footer">
         Increase the flow of customers and sales for your business with digital
