--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
   <body>
     <header>
       <nav>
-        <a class="logo" href="">Web<span class="logo-part">Studio</span> </a>
+        <a class="logo" href="./index.html"
+          >Web<span class="logo-part">Studio</span>
+        </a>
         <ul>
           <li>
             <a class="nav-link" href="/index.html">Studio</a>
@@ -58,28 +60,28 @@
         <h2>Benefits</h2>
         <ul>
           <li>
-            <h3 class="title-benefits">Strategy</h3>
+            <h3 class="benefit-item">Strategy</h3>
             <p class="title-benefits-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3 class="title-benefits">Punctuality</h3>
+            <h3 class="benefit-item">Punctuality</h3>
             <p class="title-benefits-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3 class="title-benefits">Diligence</h3>
+            <h3 class="benefit-item">Diligence</h3>
             <p class="title-benefits-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="title-benefits">Technologies</h3>
+            <h3 class="benefit-item">Technologies</h3>
             <p class="title-benefits-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -107,7 +109,7 @@
               width="264"
               height="260"
             />
-            <h3 class="team-member">Tom Ford<h3>
+            <h3 class="team-member">Tom Ford</h3>
             <p class="team-profession">Frontend Developer</p>
           </li>
           <li>
@@ -116,9 +118,8 @@
               alt="Camila Garcia"
               width="264"
               height="260"
-  />
-            <h3 class="team-member">Camila Garcia
-            </h3>
+            />
+            <h3 class="team-member">Camila Garcia</h3>
             <p class="team-profession">Marketing</p>
           </li>
           <li>
@@ -133,8 +134,73 @@
           </li>
         </ul>
       </section>
+      <section>
+        <h2 class="portfolio">Our Portfolio</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/portfolio/bank-app.jpg"
+              alt="Bank App"
+              width="360"
+              height="300"
+            />
+            <h3 class="porfolio-item">Banking App</h3>
+            <p class="portfolio-text">App</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/tel-qr.jpg"
+              alt="Qr Code"
+              width="360"
+              height="300"
+            />
+            <h3 class="porfolio-item">Cashless Payment</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/comp.jpg"
+              alt="Computer"
+              width="360"
+              height="300"
+            />
+            <h3 class="porfolio-item">Meditation App</h3>
+            <p class="portfolio-text">App</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/car.jpg"
+              alt="Car"
+              width="360"
+              height="300"
+            />
+            <h3 class="porfolio-item">Taxi Service</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/tel.jpg"
+              alt="Mobile phone"
+              width="360"
+              height="300"
+            />
+            <h3 class="porfolio-item">Screen Illustrations</h3>
+            <p class="portfolio-text">Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/girl.jpg"
+              alt="Women"
+              width="360"
+              height="300"
+            />
+            <h3 class="porfolio-item">Online Courses</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+        </ul>
+      </section>
     </main>
-    <footer>
+    <footer class="section-footer">
       <a class="logo" href="./index.html"
         >Web ><span class="logo-second">Studio</span>
       </a>
