--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </a>
         <ul>
           <li>
-            <a class="nav-link" href="/index.html">Studio</a>
+            <a class="nav-link" href="./index.html">Studio</a>
           </li>
           <li>
             <a class="nav-link" href="">Portfolio</a>
@@ -144,7 +144,7 @@
               width="360"
               height="300"
             />
-            <h3 class="porfolio-item">Banking App</h3>
+            <h3 class="portfolio-item">Banking App</h3>
             <p class="portfolio-text">App</p>
           </li>
           <li>
@@ -154,7 +154,7 @@
               width="360"
               height="300"
             />
-            <h3 class="porfolio-item">Cashless Payment</h3>
+            <h3 class="portfolio-item">Cashless Payment</h3>
             <p class="portfolio-text">Marketing</p>
           </li>
           <li>
@@ -164,7 +164,7 @@
               width="360"
               height="300"
             />
-            <h3 class="porfolio-item">Meditation App</h3>
+            <h3 class="portfolio-item">Meditation App</h3>
             <p class="portfolio-text">App</p>
           </li>
           <li>
@@ -174,7 +174,7 @@
               width="360"
               height="300"
             />
-            <h3 class="porfolio-item">Taxi Service</h3>
+            <h3 class="portfolio-item">Taxi Service</h3>
             <p class="portfolio-text">Marketing</p>
           </li>
           <li>
@@ -184,7 +184,7 @@
               width="360"
               height="300"
             />
-            <h3 class="porfolio-item">Screen Illustrations</h3>
+            <h3 class="portfolio-item">Screen Illustrations</h3>
             <p class="portfolio-text">Design</p>
           </li>
           <li>
@@ -194,7 +194,7 @@
               width="360"
               height="300"
             />
-            <h3 class="porfolio-item">Online Courses</h3>
+            <h3 class="portfolio-item">Online Courses</h3>
             <p class="portfolio-text">Marketing</p>
           </li>
         </ul>
