--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <section class="section-team">
         <h2 class="title-team">Our Team</h2>
         <ul>
-          <li>
+          <li class="team-list">
             <img
               src="./images/marc-guerrero.jpg"
               alt="Marc Guerrero"
@@ -102,7 +102,7 @@
             <h3 class="team-member">Mark Guerrero</h3>
             <p class="team-profession">Product Designer</p>
           </li>
-          <li>
+          <li class="team-list">
             <img
               src="./images/tom-ford.jpg"
               alt="Tom Ford"
@@ -112,7 +112,7 @@
             <h3 class="team-member">Tom Ford</h3>
             <p class="team-profession">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-list">
             <img
               src="./images/camila-garcia.jpg"
               alt="Camila Garcia"
@@ -122,7 +122,7 @@
             <h3 class="team-member">Camila Garcia</h3>
             <p class="team-profession">Marketing</p>
           </li>
-          <li>
+          <li class="team-list">
             <img
               src="./images/daniel-wilson.jpg"
               alt="Daniel Wilson"
