--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     </main>
     <footer class="section-footer">
       <a class="logo" href="./index.html"
-        >Web ><span class="logo-second">Studio</span>
+        >Web<span class="logo-second">Studio</span>
       </a>
       <p class="page-footer">
         Increase the flow of customers and sales for your business with digital
